# snn

./: .env.example  .gitignore  ARCHITECTURE_DECISIONS.md  CODEBASE_ANALYSIS.md  DOCUMENTATION_INDEX.md  Dockerfile  LICENSE  QUICK_START.md  README.md  alembic.ini  docker-compose.yml  ecosystem.config.cjs  ecosystem.tracecheck.cjs  pyproject.toml  start_dashboard.sh
carbonsnn/: __init__.py  config.py
carbonsnn/analysis/: __init__.py  carbon_stock.py  deforestation.py  mrv_report.py
carbonsnn/api/: auth.py  deps.py  main.py  schemas.py
carbonsnn/api/routes/: alerts.py  analysis.py  projects.py  webhooks.py
carbonsnn/dashboard/: app.py
carbonsnn/data/: __init__.py  cloud_mask.py  preprocessor.py  sentinel2.py  vegetation.py
carbonsnn/db/: __init__.py  crud.py  models.py  session.py
carbonsnn/models/: __init__.py  carbon_snn.py  change_detector.py  forest_snn.py  hybrid.py
carbonsnn/scheduler/: __init__.py  weekly_scan.py
data/reports/3abfaddc-cab4-40b9-b1dd-ea20f6156db1/: tracecheck_report_3abfaddc_20260407_104922.json
data/reports/445cd71d-92e9-4a95-92bc-66f71112338f/: tracecheck_report_445cd71d_20260407_104342.json
data/reports/46c404c3-bc0d-49b2-a3a2-84a4f543ea09/: tracecheck_report_46c404c3_20260407_104315.json
data/reports/60b43722-9b3c-44c5-aeb7-1adb99b3cd73/: tracecheck_report_60b43722_20260406_070734.json
data/reports/9b7b91e5-6d61-4098-97ce-7b75a32be979/: tracecheck_report_9b7b91e5_20260406_090420.csv  tracecheck_report_9b7b91e5_20260406_090420.json  tracecheck_report_9b7b91e5_20260406_090432.json  tracecheck_report_9b7b91e5_20260406_090548.json
data/reports/9d1267d3-8b62-49ff-a79e-92a360569659/: tracecheck_report_9d1267d3_20260406_072905.json
data/reports/bb94052d-faf0-4cb4-9960-bec0d85ec249/: tracecheck_report_bb94052d_20260406_090633.csv  tracecheck_report_bb94052d_20260406_090633.json
data/reports/e5f105c0-6651-43b9-b49b-acf6ec0ec426/: tracecheck_report_e5f105c0_20260406_084407.csv  tracecheck_report_e5f105c0_20260406_084407.json
docs/: COPERNICUS_SETUP.md  STRATEGY_ANALYSIS.md
examples/: sample_plots.csv
examples/carbon_mrv/: __init__.py  config.py  pipeline.py
examples/deforestation_alert/: __init__.py  pipeline.py
examples/retail_counting/: __init__.py  pipeline.py
frontend/: app.py  index.html
frontend-react/: index.html  package-lock.json  package.json  vite.config.js
frontend-react/src/: App.jsx  index.css
frontend-react/src/api/: client.js
frontend-react/src/context/: AuthContext.jsx
frontend-react/src/hooks/: useCountUp.js
frontend-react/src/pages/: LandingPage.jsx  LoginPage.jsx  RegisterPage.jsx
frontend-react/src/pages/dashboard/: DashboardHome.jsx  DashboardLayout.jsx  ProjectDetail.jsx  ProjectExport.jsx  ProjectHistory.jsx  ProjectResults.jsx  ProjectsPage.jsx  SettingsPage.jsx
migrations/: env.py
migrations/versions/: 7383bf8ccdad_v2_saas_schema.py  dda115785cd7_initial_schema.py
scripts/: benchmark_run.py  download_sentinel2.py  generate_whitepaper_data.py  run_benchmark.py  seed_demo.py  seed_demo_data.py  train_eurosat.py  train_forest_snn.py  train_snn.py
spikeeo/: __init__.py  cli.py  config.py  engine.py
spikeeo/api/: __init__.py  auth.py  deps.py  schemas.py  server.py
spikeeo/api/routes/: __init__.py  benchmark.py  inference.py  tasks.py
spikeeo/benchmark/: __init__.py  cnn_vs_snn.py  cost_calculator.py
spikeeo/core/: __init__.py  cnn_fallback.py  converter.py  hybrid_router.py  snn_backbone.py
spikeeo/db/: __init__.py  crud.py  models.py  session.py
spikeeo/io/: __init__.py  cloud_mask.py  geotiff_reader.py  output_writer.py  tiler.py  vegetation.py
spikeeo/tasks/: __init__.py  anomaly.py  change_detection.py  classification.py  detection.py  segmentation.py
tests/: __init__.py  conftest.py  test_api.py  test_backbone.py  test_benchmark.py  test_carbon.py  test_carbon_example.py  test_engine.py  test_hybrid.py  test_io.py  test_models.py  test_pipeline.py  test_tasks.py
tracecheck/: __init__.py  config.py
tracecheck/api/: auth.py  main.py  schemas.py
tracecheck/api/routes/: accuracy.py  admin.py  analysis.py  auth.py  organizations.py  parcels.py  projects.py  reports.py  traces.py  webhooks.py
tracecheck/core/: accuracy_validator.py  change_detector.py  geo_validator.py  report_generator.py  risk_scorer.py  sentinel_fetcher.py
tracecheck/db/: crud.py  models.py  session.py
tracecheck/pipeline/: eudr_pipeline.py
