[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# ─────────────────────────────────────────────────────────────────────────────
# SpikeEO engine (existing — keep as-is)
# ─────────────────────────────────────────────────────────────────────────────
[project]
name = "tracecheck"
version = "0.1.0"
description = "EUDR Supply Chain Pre-screening SaaS — Powered by SpikeEO"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "TraceCheck Team" }]

dependencies = [
    # ── Geospatial (SpikeEO reuse) ────────────────────────────────────────────
    "rasterio>=1.3.9",
    "shapely>=2.0.3",
    "pyproj>=3.6.1",
    "numpy>=1.26.0",
    # ── Web framework ────────────────────────────────────────────────────────
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "python-multipart>=0.0.9",
    "aiofiles>=23.2.1",
    # ── Auth / Security ──────────────────────────────────────────────────────
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "bcrypt>=4.0.1,<5.0.0",
    # ── Database ─────────────────────────────────────────────────────────────
    "sqlalchemy>=2.0.29",
    "aiosqlite>=0.20.0",
    # ── Config ───────────────────────────────────────────────────────────────
    "pydantic>=2.7.0",
    "pydantic-settings>=2.2.1",
    "pydantic[email]>=2.7.0",
    "python-dotenv>=1.0.1",
    # ── HTTP client ──────────────────────────────────────────────────────────
    "httpx>=0.27.0",
    "tenacity>=8.2.3",
    # ── PDF reports ──────────────────────────────────────────────────────────
    "reportlab>=4.0.0",
    # ── Utilities ────────────────────────────────────────────────────────────
    "pandas>=2.2.1",
    "tqdm>=4.66.2",
]

[project.optional-dependencies]
snn = [
    # SpikeEO engine (optional for v2 enhanced accuracy)
    "torch>=2.2.0",
    "torchvision>=0.17.0",
    "snntorch>=0.9.0",
    "scipy>=1.12.0",
]
dev = [
    "pytest>=8.1.1",
    "pytest-asyncio>=0.23.6",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",
    "black>=24.4.0",
    "ruff>=0.4.1",
    "mypy>=1.9.0",
]

[project.scripts]
tracecheck-api = "tracecheck.api.main:start"

[tool.hatch.build.targets.wheel]
packages = ["tracecheck", "spikeeo"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --tb=short"
